--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,3 +6,13 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
 
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
 
+//variables//
+
+    //fonts
+    $primaryFont: 'Lora', serif;
+    $secondaryFont: 'Barlow', sans-serif;
+
+//colors
+    $plantGreen: #207200;
+    $white: #fff;
+    $black: #1A2428;
