--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -16,3 +16,23 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
     $plantGreen: #207200;
     $white: #fff;
     $black: #1A2428;
+
+//mixins 
+
+//generic styles//
+
+//reusable code//
+
+//nagivation section//
+
+//header section//
+
+//about section//
+
+//shop section//
+
+//gallery section//
+
+//blog section//
+
+//footer section//
