--- a/styles/style.css
+++ b/styles/style.css
@@ -227,7 +227,7 @@ template {
 }
 
 html {
-  font-family: "Lora", serif;
+  font-family: "Barlow", sans-serif;
   color: #1A2428;
   font-size: 125%;
 }
@@ -252,6 +252,14 @@ ul {
 a {
   text-decoration: none;
   color: #1A2428;
+}
+
+button {
+  background-color: #207200;
+  color: #fff;
+  border: none;
+  font-family: "Barlow", sans-serif;
+  box-shadow: 0 0 2px rgba 0, 0, 0, 0.25;
 }
 
 nav {
