--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,8 +9,8 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
 //variables//
 
     //fonts
-    $primaryFont: 'Lora', serif;
-    $secondaryFont: 'Barlow', sans-serif;
+    $primaryFont: 'Barlow', sans-serif; 
+    $secondaryFont: 'Lora', serif;
 
 //colors
     $plantGreen: #207200;
@@ -24,6 +24,12 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
     flex-direction: $flexDirection;
     justify-content: $justifyContent;
     align-items: $alignItems;
+}
+
+@mixin btnStyling () {
+    padding: $padding;
+    border-radius: $bRadius;
+    margin: $margin;
 }
 
 //generic styles//
@@ -55,6 +61,14 @@ ul {
 a {
     text-decoration: none;
     color: $black;
+}
+
+button {
+    background-color: $plantGreen;
+    color: $white;
+    border: none;
+    font-family: $primaryFont;
+    box-shadow: 0 0 2px rgba ((0, 0, 0, 0.25));
 }
 
 //nagivation section//
