--- a/styles/style.css
+++ b/styles/style.css
@@ -262,19 +262,37 @@ button {
   box-shadow: 0 0 2px rgba 0, 0, 0, 0.25;
 }
 
+.textContainer,
+.imageContainer {
+  width: 50%;
+}
+
+img {
+  width: 100%;
+}
+
 nav {
+  height: 10vh;
+  color: #fff;
+  box-shadow: 0 0 7px rgba(0, 0, 0, 0.25);
   display: flex;
-  flex-direction: row;
+  flex-direction: 0;
+  justify-content: 0;
+  align-items: center;
+}
+nav .wrapper {
+  display: flex;
+  flex-direction: 0;
   justify-content: space-between;
   align-items: center;
 }
-nav ul {
+nav .wrapper ul {
   display: flex;
-  flex-direction: row;
+  flex-direction: 0;
   justify-content: space-between;
   align-items: center;
 }
-nav ul li {
+nav .wrapper ul li {
   margin-left: 1rem;
 }
 
@@ -282,9 +300,8 @@ header {
   height: 100vh;
   background-image: url(../assets/header/background.png);
   background-position: center;
-  background-repeat: no-repeat;
   background-size: cover;
-  background-color: red;
+  background-repeat: no-repeat;
 }
 
 .hero {
@@ -293,4 +310,11 @@ header {
   justify-content: space-between;
   align-items: center;
   height: 90vh;
+}
+
+.about .wrapper {
+  display: flex;
+  flex-direction: 0;
+  justify-content: space-between;
+  align-items: flex-start;
 }
