--- a/styles/style.scss
+++ b/styles/style.scss
@@ -26,10 +26,16 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
     align-items: $alignItems;
 }
 
-@mixin btnStyling () {
+@mixin btnStyling() {
     padding: $padding;
     border-radius: $bRadius;
     margin: $margin;
+}
+
+@mixin bgImgStyling($bgPosition, $bgSize, $bgRepeat) {
+    background-position: $bgPosition;
+    background-size: $bgSize;
+    background-repeat: $bgRepeat;
 }
 
 //generic styles//
@@ -71,14 +77,29 @@ button {
     box-shadow: 0 0 2px rgba ((0, 0, 0, 0.25));
 }
 
+.textContainer,
+.imageContainer {
+    width: 50%;
+}
+
+img {
+    width: 100%;
+}
+
 //nagivation section//
 
 nav {
-    @include flexStyle(flex, row, space-between, center);
-    ul {
-        @include flexStyle(flex, row , space-between, center);
-        li {
-            margin-left: 1rem;
+    height: 10vh;
+    color: $white;
+    box-shadow: 0 0 7px (rgba(0, 0, 0, 0.25));
+    @include flexStyle(flex, 0, 0, center);
+    .wrapper {
+        @include flexStyle(flex, 0, space-between, center);
+        ul {
+            @include flexStyle(flex, 0 , space-between, center);
+            li {
+                margin-left: 1rem;
+            }
         }
     }
 }
@@ -88,10 +109,7 @@ nav {
 header {
     height: 100vh;
     background-image: url(../assets/header/background.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: red;
+    @include bgImgStyling(center, cover, no-repeat);
 }
 
 .hero {
@@ -100,6 +118,10 @@ header {
 }
 
 //about section//
+
+.about .wrapper {
+    @include flexStyle(flex, 0, space-between, flex-start);
+}
 
 //shop section//
 
