--- a/styles/style.css
+++ b/styles/style.css
@@ -243,6 +243,15 @@ body {
   margin: 0 auto;
 }
 
+h1, h2, h3, p {
+  padding: 0;
+  margin: 0;
+}
+
+p {
+  line-height: 1.6rem;
+}
+
 ul {
   list-style: none;
   margin: 0;
@@ -259,6 +268,7 @@ button {
   color: #fff;
   border: none;
   font-family: "Barlow", sans-serif;
+  font-weight: 600;
   box-shadow: 0 0 2px rgba 0, 0, 0, 0.25;
 }
 
@@ -291,9 +301,14 @@ nav .wrapper ul {
   flex-direction: 0;
   justify-content: space-between;
   align-items: center;
+  text-transform: uppercase;
+  font-weight: 500;
 }
 nav .wrapper ul li {
-  margin-left: 1rem;
+  margin-left: 2rem;
+}
+nav .wrapper ul svg {
+  width: 1.5rem;
 }
 
 header {
@@ -311,10 +326,28 @@ header {
   align-items: center;
   height: 90vh;
 }
+.hero .textContainer h1 {
+  font-family: "Lora", serif;
+  font-size: 2.5rem;
+  font-weight: 900;
+  letter-spacing: 0.1rem;
+  line-height: 3.5rem;
+}
+.hero .textContainer p {
+  padding: 2rem 0;
+}
+.hero .textContainer button {
+  font-size: 0.8rem;
+  padding: 0.5rem 1rem;
+  border-radius: 1rem;
+  margin: 0;
+  text-transform: uppercase;
+}
 
 .about .wrapper {
   display: flex;
   flex-direction: 0;
   justify-content: space-between;
   align-items: flex-start;
+  padding: 4rem 0;
 }
