--- a/styles/style.css
+++ b/styles/style.css
@@ -279,6 +279,8 @@ button {
 
 img {
   width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 nav {
@@ -313,10 +315,6 @@ nav .wrapper ul svg {
 
 header {
   height: 100vh;
-  background-image: url(../assets/header/background.png);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .hero {
@@ -325,6 +323,19 @@ header {
   justify-content: space-between;
   align-items: center;
   height: 90vh;
+  background-image: url(../assets/header/background.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.hero .wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.hero .textContainer {
+  padding-right: 2rem;
 }
 .hero .textContainer h1 {
   font-family: "Lora", serif;
@@ -349,5 +360,55 @@ header {
   flex-direction: 0;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 4rem 0;
+  padding: 5rem 0;
+}
+.about .wrapper .textContainer h3 {
+  font-family: "Lora", serif;
+  font-size: 2rem;
+  font-weight: 0;
+  letter-spacing: 0;
+  line-height: 2.5rem;
+  padding: 1rem 0;
+}
+.about .wrapper .textContainer p {
+  padding: 0.5rem 0;
+}
+.about .wrapper .textContainer button {
+  font-size: 0.8rem;
+  padding: 0.5rem 1rem;
+  border-radius: 1rem;
+  margin: 0;
+  text-transform: uppercase;
+  margin-top: 1rem;
+}
+.about .wrapper .aboutText {
+  padding-right: 3rem;
+}
+.about .wrapper .textContainer .aboutFact {
+  font-family: "Lora", serif;
+  font-size: 1.5rem;
+  font-weight: 500;
+  letter-spacing: 0.075rem;
+  line-height: 2rem;
+  background-color: green;
+  color: #fff;
+  padding: 4rem;
+  border-radius: 2rem;
+  margin-left: 2rem;
+}
+
+.productGallery {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.productGallery li {
+  max-width: 275px;
+  margin-bottom: 2rem;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+}
+.productGallery li .imageContainer {
+  width: 100%;
 }
