--- a/styles/style.scss
+++ b/styles/style.scss
@@ -104,6 +104,7 @@ button {
 
 img {
     width: 100%;
+    object-fit: cover;
 }
 
 //nagivation section//
@@ -133,14 +134,18 @@ nav {
 
 header {
     height: 100vh;
-    background-image: url(../assets/header/background.png);
-    @include bgImgStyling(center, cover, no-repeat);
 }
 
 .hero {
     @include flexStyle(flex, row, space-between, center);
     height: 90vh;
+    background-image: url(../assets/header/background.png);
+    @include bgImgStyling(center, cover, no-repeat);
+    .wrapper {
+        @include flexStyle(flex, row, space-between, center);
+    }
     .textContainer {
+        padding-right: 2rem;
         h1 {
             @include fontStyling($secondaryFont, 2.5rem, 900, 0.1rem, 3.5rem);
         }
@@ -157,11 +162,47 @@ header {
 
 .about .wrapper {
     @include flexStyle(flex, 0, space-between, flex-start);
-    padding: 4rem 0;
-
+    padding: 5rem 0;
+    .textContainer {
+        h3 {
+            @include fontStyling($secondaryFont, 2rem, 0, 0, 2.5rem);
+            padding: 1rem 0;
+        }
+        p {
+            padding: 0.5rem 0;
+        }
+        button {
+            @include btnStyling(0.8rem, 0.5rem 1rem, 1rem, uppercase, 0);
+            margin-top: 1rem;
+        }
+    }
+    .aboutText {
+        padding-right: 3rem;
+    }
+    .textContainer .aboutFact {
+        @include fontStyling($secondaryFont, 1.5rem, 500, 0.075rem, 2rem);
+        background-color: green; //figure out the right color here//
+        color: $white;
+        padding: 4rem;
+        border-radius: 2rem;
+        margin-left: 2rem;
+    }
 }
 
 //shop section//
+
+.productGallery {
+    @include flexStyle(flex, row, space-between, center);
+    flex-wrap: wrap;
+    li {
+        max-width: 275px;
+        margin-bottom: 2rem;
+        box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+        .imageContainer {
+            width: 100%;
+        }
+    }
+}
 
 //gallery section//
 
