--- a/styles/style.scss
+++ b/styles/style.scss
@@ -308,7 +308,50 @@ header {
     }
 }
 
-
 //blog section//
-
+.blog {
+    background-color: $plantGreen;
+    padding: 6rem 0;
+    .wrapper {
+        @include flexStyle(flex, column, center, center);
+        .topBlog {
+            width: 65%;
+            color: $white;
+            text-align: center;
+            h2 {
+                @include fontStyling($secondaryFont, 2rem, 0, 0, 1rem);
+                text-transform: uppercase;
+            }
+            p {
+                padding: 2rem;
+            }
+        }
+        ul {
+            @include flexStyle(flex, row, space-between, center);
+            .blogPost {
+                width: 32%;
+                border-radius: 6px;
+                background-color: $white;
+                padding: 1rem;
+                box-shadow: 0 5px 8px rgba(0, 0, 0, 0.3);
+                .imageContainer {
+                    width: 100%;
+                }
+                .textContainer {
+                    padding: 1rem 0;
+                    width: 100%;
+                    h3 {
+                        @include fontStyling($secondaryFont, 1.25rem, 0, 0, 2rem);
+                    }
+                    p {
+                        padding: 1rem 0;
+                    }
+                    button {
+                        margin-top: 1rem;
+                    }
+                }
+            }
+        }
+    }
+}
 //footer section//
