--- a/styles/style.scss
+++ b/styles/style.scss
@@ -12,7 +12,7 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
     $primaryFont: 'Barlow', sans-serif; 
     $secondaryFont: 'Lora', serif;
 
-//colors
+    //colors
     $plantGreen: #207200;
     $white: #fff;
     $black: #1A2428;
@@ -50,12 +50,13 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
     background-repeat: $bgRepeat;
 }
 
-@mixin fontStyling($fontFamily, $fontSize, $fontWeight, $letterSpacing, $lineHeight) {
+@mixin fontStyling($fontFamily, $fontSize, $fontWeight, $letterSpacing, $lineHeight, $textTransform) {
     font-family: $fontFamily;
     font-size: $fontSize;
     font-weight: $fontWeight;
     letter-spacing: $letterSpacing;
     line-height: $lineHeight;
+    text-transform: $textTransform;
 }
 
 //generic styles//
@@ -63,6 +64,7 @@ html {
     font-family: $primaryFont;
     color: $black;
     font-size: 125%;
+    font-weight: 400;
 }
 
 body {
@@ -81,6 +83,14 @@ body {
 h1, h2, h3, p {
     padding: 0;
     margin: 0;
+}
+
+h2 {
+    @include fontStyling($secondaryFont, 2rem, 700, 0.1rem, 2rem, uppercase);
+}
+
+h3 {
+    @include fontStyling($secondaryFont, 1rem, 600, 0.025rem, 1.5rem, 0);
 }
 
 p {
@@ -128,19 +138,24 @@ img {
     object-fit: cover;
 }
 
+.sectionHeading {
+    width: 65%;
+    text-align: center;
+}
+
 //nagivation section//
 
 nav {
     height: 10vh;
     color: $white;
-    box-shadow: 0 0 7px (rgba(0, 0, 0, 0.25));
+    box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.3); //why isn't box shadow rendering?
     @include flexStyle(flex, 0, 0, center);
     .wrapper {
         @include flexStyle(flex, 0, space-between, center);
         ul {
             @include flexStyle(flex, 0 , space-between, center);
             text-transform: uppercase;
-            font-weight: 500;
+            font-weight: 600;
             li {
                 margin-left: 2rem;
             }
@@ -168,7 +183,7 @@ header {
     .textContainer {
         padding-right: 2rem;
         h1 {
-            @include fontStyling($secondaryFont, 2.5rem, 900, 0.1rem, 3.5rem);
+            @include fontStyling($secondaryFont, 2.5rem, 900, 0.1rem, 3.5rem, capitalize);
         }
         p {
             padding: 2rem 0;
@@ -183,10 +198,11 @@ header {
     padding: 5rem 0;
     .textContainer {
         h2 {
-            @include fontStyling($secondaryFont, 1.25rem, 0, 0, 2.5rem);
+            @include fontStyling(0, 1.25rem, 0, 0, 0, capitalize);
+            padding-bottom: 0.5rem;
         }
         h3 {
-            @include fontStyling($secondaryFont, 2rem, 0, 0, 2.5rem);
+            @include fontStyling (0, 2rem, 0, 0, 2.5rem, capitalize);
             padding: 1rem 0;
         }
         p {
@@ -200,8 +216,8 @@ header {
         padding-right: 3rem;
     }
     .textContainer .aboutFact {
-        @include fontStyling($secondaryFont, 1.5rem, 500, 0.075rem, 2rem);
-        background-color: green; //figure out the right color here//
+        @include fontStyling($secondaryFont, 1.5rem, 500, 0.075rem, 2rem, capitalize);
+        background-color: #5EA85E; //figure out the right color here//
         color: $white;
         padding: 4rem;
         border-radius: 2rem;
@@ -210,17 +226,13 @@ header {
 }
 
 //shop section//
-.shopProducts {
+.shop {
     padding: 5rem;
     .wrapper {
         @include flexStyle(flex, column, center, center);
         .shopText {
             width: 65%;
             text-align: center;
-            h2 {
-                @include fontStyling($secondaryFont, 2rem, 0, 0, 1rem);
-                text-transform: uppercase;
-            }
             p {
                 padding: 2rem;
             }
@@ -238,9 +250,6 @@ header {
                 }
                 .productInfoContainer {
                     padding: 0.75rem;
-                    h3 {
-                        @include fontStyling($secondaryFont, 1.1rem, 0, 0, 1rem);
-                    }
                     p {
                         padding: 0.75rem 0;
                     }
@@ -274,10 +283,6 @@ header {
         text-align: center;
         .topGallery {
             width: 65%;
-            h2 {
-                @include fontStyling($secondaryFont, 2rem, 0, 0, 1rem);
-                text-transform: uppercase;
-            }
             p {
                 padding: 2rem;
             }
@@ -318,10 +323,6 @@ header {
             width: 65%;
             color: $white;
             text-align: center;
-            h2 {
-                @include fontStyling($secondaryFont, 2rem, 0, 0, 1rem);
-                text-transform: uppercase;
-            }
             p {
                 padding: 2rem;
             }
@@ -341,7 +342,7 @@ header {
                     padding: 1rem 0;
                     width: 100%;
                     h3 {
-                        @include fontStyling($secondaryFont, 1.25rem, 0, 0, 2rem);
+                        font-size: 1.15rem;
                     }
                     p {
                         padding: 1rem 0;
@@ -367,7 +368,7 @@ footer {
             height: 45vh;
             h3 {
                 padding-bottom: 2rem;
-                @include fontStyling($secondaryFont, 1.15rem, 700, 0.075rem, 1.5rem);
+                @include fontStyling($secondaryFont, 1.15rem, 700, 0.075rem, 1.5rem, 0);
             }
         }
         .first {
