--- a/styles/style.css
+++ b/styles/style.css
@@ -342,20 +342,26 @@ button {
   letter-spacing: 0;
 }
 
+img {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .textContainer,
 .imageContainer {
   width: 50%;
 }
 
-img {
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+.sectionHeading {
+  text-align: center;
 }
 
-.sectionHeading {
+.sectionHeading p {
+  padding: 2.5rem;
+  margin: 0 auto;
   width: 65%;
-  text-align: center;
 }
 
 nav {
@@ -481,13 +487,6 @@ header {
   justify-content: center;
   align-items: center;
 }
-.shop .wrapper .shopText {
-  width: 65%;
-  text-align: center;
-}
-.shop .wrapper .shopText p {
-  padding: 2rem;
-}
 .shop .wrapper .productGallery {
   display: flex;
   flex-direction: row;
@@ -497,8 +496,7 @@ header {
 }
 .shop .wrapper .productGallery li {
   max-width: 275px;
-  margin-bottom: 2rem;
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+  margin-bottom: 3rem;
   position: relative;
 }
 .shop .wrapper .productGallery li .imageContainer {
@@ -506,6 +504,9 @@ header {
 }
 .shop .wrapper .productGallery li .productInfoContainer {
   padding: 0.75rem;
+  border-bottom: 1px solid lightgray;
+  border-left: 1px solid lightgray;
+  border-right: 1px solid lightgray;
 }
 .shop .wrapper .productGallery li .productInfoContainer p {
   padding: 0.75rem 0;
@@ -539,13 +540,7 @@ header {
   padding: 5rem 0;
   text-align: center;
 }
-.gallery .wrapper .topGallery {
-  width: 65%;
-}
-.gallery .wrapper .topGallery p {
-  padding: 2rem;
-}
-.gallery .wrapper .topGallery button {
+.gallery .wrapper .sectionHeading button {
   margin: 0 0.3rem;
 }
 .gallery .wrapper .mainGallery {
@@ -585,13 +580,8 @@ header {
   justify-content: center;
   align-items: center;
 }
-.blog .wrapper .topBlog {
-  width: 65%;
+.blog .wrapper .sectionHeading {
   color: #fff;
-  text-align: center;
-}
-.blog .wrapper .topBlog p {
-  padding: 2rem;
 }
 .blog .wrapper ul {
   display: flex;
