--- a/styles/style.scss
+++ b/styles/style.scss
@@ -67,11 +67,6 @@ html {
     font-weight: 400;
 }
 
-body {
-    margin: 0;
-    padding: 0;
-}
-
 //reusable code//
 
 .wrapper {
@@ -80,7 +75,7 @@ body {
     margin: 0 auto;
 }
 
-h1, h2, h3, p {
+body, h1, h2, h3, ul, p {
     padding: 0;
     margin: 0;
 }
@@ -99,8 +94,6 @@ p {
 
 ul {
     list-style: none;
-    margin: 0;
-    padding: 0;
 }
 
 a {
@@ -134,6 +127,12 @@ img {
     object-fit: cover;
 }
 
+svg {
+    width: 1.5rem;
+    height: 1.5rem;
+    object-fit: cover;
+}
+
 .textContainer,
 .imageContainer {
     width: 50%;
@@ -151,10 +150,11 @@ img {
 
 //nagivation section//
 
-nav {
+header nav {
     height: 10vh;
     color: $white;
-    box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.3); //why isn't box shadow rendering?
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
+    position: relative;
     @include flexStyle(flex, 0, 0, center);
     .wrapper {
         @include flexStyle(flex, 0, space-between, center);
@@ -165,9 +165,6 @@ nav {
             li {
                 margin-left: 2rem;
             }
-                svg {
-                    width: 1.5rem;
-                }
         }
     }
 }
@@ -370,13 +367,17 @@ footer {
             }
             nav {
                 @include flexStyle(flex, row, space-between, center);
+                width: 100%;
+                ul {
+                    @include flexStyle(flex, row, space-between, center);
+                    width: 60%;
+                }
             }
         }
         .second {
             padding-left: 1rem;
             nav {
                 height: 100%;
-                box-shadow: none;
                 ul {
                     @include flexStyle(flex, column, space-between, flex-start);
                     height: 100%;
