--- a/styles/style.css
+++ b/styles/style.css
@@ -237,6 +237,7 @@ html {
   max-width: 1200px;
   width: 90%;
   margin: 0 auto;
+  padding: 5rem 0;
 }
 
 body, h1, h2, h3, ul, p {
@@ -246,9 +247,9 @@ body, h1, h2, h3, ul, p {
 
 h2 {
   font-family: "Lora", serif;
-  font-size: 2rem;
+  font-size: 1.75rem;
   font-weight: 700;
-  letter-spacing: 0.1rem;
+  letter-spacing: 0;
   line-height: 2rem;
   text-transform: uppercase;
 }
@@ -275,6 +276,34 @@ a {
   color: #1A2428;
 }
 
+img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+svg {
+  width: 1.5rem;
+  height: 1.5rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.textContainer,
+.imageContainer {
+  width: 50%;
+}
+
+.sectionHeading {
+  text-align: center;
+}
+
+.sectionHeading p {
+  padding: 2.5rem;
+  margin: 0 auto;
+  width: 65%;
+}
+
 button {
   background-color: #207200;
   color: #fff;
@@ -282,7 +311,7 @@ button {
   border-radius: 1rem;
   border: none;
   margin: 0;
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
   font-family: "Barlow", sans-serif;
   font-size: 0.9rem;
   font-weight: 500;
@@ -333,35 +362,6 @@ button {
   font-weight: 600;
   text-transform: capitalize;
   letter-spacing: 0;
-}
-
-img {
-  width: 100%;
-  height: auto;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-svg {
-  width: 1.5rem;
-  height: 1.5rem;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.textContainer,
-.imageContainer {
-  width: 50%;
-}
-
-.sectionHeading {
-  text-align: center;
-}
-
-.sectionHeading p {
-  padding: 2.5rem;
-  margin: 0 auto;
-  width: 65%;
 }
 
 header nav {
@@ -433,7 +433,6 @@ header {
   flex-direction: 0;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 5rem 0;
 }
 .about .wrapper .textContainer h2 {
   font-family: 0;
@@ -476,9 +475,6 @@ header {
   margin-left: 2rem;
 }
 
-.shop {
-  padding: 5rem;
-}
 .shop .wrapper {
   display: flex;
   flex-direction: column;
@@ -535,7 +531,6 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 5rem 0;
   text-align: center;
 }
 .gallery .wrapper .sectionHeading button {
@@ -570,7 +565,6 @@ header {
 
 .blog {
   background-color: #207200;
-  padding: 6rem 0;
 }
 .blog .wrapper {
   display: flex;
@@ -622,7 +616,6 @@ footer .wrapper {
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 5rem 0 4rem 0;
 }
 footer .wrapper .footerCol {
   display: flex;
@@ -631,6 +624,7 @@ footer .wrapper .footerCol {
   align-items: flex-start;
   width: 25%;
   height: 45vh;
+  background-color: red;
 }
 footer .wrapper .footerCol h3 {
   padding-bottom: 2rem;
