--- a/styles/style.css
+++ b/styles/style.css
@@ -624,7 +624,6 @@ footer .wrapper .footerCol {
   align-items: flex-start;
   width: 25%;
   height: 45vh;
-  background-color: red;
 }
 footer .wrapper .footerCol h3 {
   padding-bottom: 2rem;
@@ -638,6 +637,7 @@ footer .wrapper .footerCol h3 {
 footer .wrapper .first img {
   width: 40%;
   padding: 0.75rem 0;
+  filter: invert(24%) sepia(77%) saturate(4208%) hue-rotate(79deg) brightness(55%) contrast(101%);
 }
 footer .wrapper .first nav {
   display: flex;
