--- a/styles/style.scss
+++ b/styles/style.scss
@@ -348,7 +348,6 @@ footer {
             @include flexStyle(flex, column, space-between, flex-start);
             width: 25%;
             height: 45vh;
-            background-color: red;
             h3 {
                 padding-bottom: 2rem;
                 @include fontStyling($secondaryFont, 1.15rem, 700, 0.075rem, 1.5rem, 0);
@@ -358,6 +357,7 @@ footer {
             img {
                 width: 40%;
                 padding: 0.75rem 0;
+                filter: invert(24%) sepia(77%) saturate(4208%) hue-rotate(79deg) brightness(55%) contrast(101%);            
             }
             nav {
                 @include flexStyle(flex, row, space-between, center);
